--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ section {
 }
 
 footer {
-    background-color: #333;
+    background-color: rgb(53, 213, 133);
     color: white;
     padding: 10px;
     text-align: center;
