--- a/style.css
+++ b/style.css
@@ -1,38 +1,54 @@
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
-header {
+/* header {
     background-color: #333;
     color: white;
     padding: 20px;
     text-align: center;
-}
+} */
 
 h1 {
-    margin: 0;
+  margin: 0;
 }
 
 main {
-    flex: 1;
-    padding: 20px;
+  flex: 1;
+  padding: 20px;
 }
 
 section {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 footer {
-    background-color: rgb(53, 213, 133);
-    color: white;
-    padding: 10px;
-    text-align: center;
+  background-color: rgb(53, 213, 133);
+  color: white;
+  padding: 10px;
+  text-align: center;
 }
 .text-center {
-    text-align: center;
+  text-align: center;
+}
+@keyframes floater {
+  0% {
+    transform: translateY(-10%);
+    transition: ease 0.5s;
+  }
+  50% {
+    transform: translateY(10%);
+    transition: ease 0.5s;
+  }
+}
+
+.floating-img {
+  transform: translateY(-10%);
+  animation: floater 6s infinite;
+  transition: ease 0.5s;
 }
