--- a/style.css
+++ b/style.css
@@ -2,40 +2,17 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
-/* header {
-    background-color: #333;
-    color: white;
-    padding: 20px;
-    text-align: center;
-} */
-
-h1 {
-  margin: 0;
-}
-
-main {
-  flex: 1;
-  padding: 20px;
-}
-
-section {
-  margin-bottom: 20px;
+  background-color: #03170f;
 }
 
 footer {
   background-color: rgb(53, 213, 133);
   color: white;
   padding: 10px;
+  padding-block: 0.95rem;
   text-align: center;
 }
-.text-center {
-  text-align: center;
-}
+
 @keyframes floater {
   0% {
     transform: translateY(-10%);
